Prevent the "Subscribe" button focus outline from being cut off
We tried to align the buttons with the far edge of the page, but due
to skin styles setting `overflow: hidden` on the content, this is not
possible without causing the focus outline to be cut off.

Bug: T311662

--- a/modules/dt.init.less
+++ b/modules/dt.init.less
@@ -274,7 +274,8 @@ span[ data-mw-comment-start ] {
 
 		&-actions {
 			margin-left: auto;
-			margin-right: -6px;
+			// Prevent the focus outline from being cut off (T311662), do not set to negative values
+			margin-right: 0;
 		}
 
 		&-ellipsisButton {
@@ -402,7 +403,8 @@ span[ data-mw-comment-start ] {
 		}
 
 		&-actions {
-			margin-right: 0;
+			// Prevent the Apex theme focus outline from being cut off (T311662)
+			margin-right: 4px;
 		}
 
 		&-subscribeButton {
